--- a/HighSchoolFish/View/CommentHeaderReusableView.xib
+++ b/HighSchoolFish/View/CommentHeaderReusableView.xib
@@ -1,17 +1,187 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CommentHeader" id="U6b-Vx-4bR" customClass="CommentHeaderReusableView" customModule="HighSchoolFish" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="359" height="141"/>
             <autoresizingMask key="autoresizingMask"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Fd-Hf-FXx">
+                    <rect key="frame" x="0.0" y="0.0" width="359" height="141"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hM6-tR-vwb">
+                            <rect key="frame" x="16" y="16" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="3UK-ne-WK9"/>
+                                <constraint firstAttribute="width" secondItem="hM6-tR-vwb" secondAttribute="height" multiplier="1:1" id="LN8-TN-SeW"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국회는 헌법개정안이 공고된 날로부터 60일 이내에 의결하여야 하며, 국회의 의결은 블라블라블라블라" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3u-Qs-H4n">
+                            <rect key="frame" x="56" y="35.333333333333343" width="257" height="46.666666666666657"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QIR-bY-rLL">
+                            <rect key="frame" x="56" y="16" width="287" height="14.333333333333336"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FLO-01-XJK">
+                                    <rect key="frame" x="39.333333333333329" y="2.3333333333333321" width="21" height="12"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                    <color key="textColor" name="gray"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAj-EC-Cf7">
+                                    <rect key="frame" x="0.0" y="0.0" width="34.333333333333336" height="14.333333333333334"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="mAj-EC-Cf7" firstAttribute="leading" secondItem="QIR-bY-rLL" secondAttribute="leading" id="SFS-cE-Reg"/>
+                                <constraint firstAttribute="bottom" secondItem="mAj-EC-Cf7" secondAttribute="bottom" id="Yvf-7Z-MlT"/>
+                                <constraint firstItem="FLO-01-XJK" firstAttribute="leading" secondItem="mAj-EC-Cf7" secondAttribute="trailing" constant="5" id="b5O-be-hn7"/>
+                                <constraint firstAttribute="bottom" secondItem="FLO-01-XJK" secondAttribute="bottom" id="bQU-1D-onZ"/>
+                                <constraint firstItem="mAj-EC-Cf7" firstAttribute="top" secondItem="QIR-bY-rLL" secondAttribute="top" id="vBm-qJ-HqB"/>
+                            </constraints>
+                        </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MWS-Rg-6HF">
+                            <rect key="frame" x="56" y="87" width="45" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="ZMP-5X-UcX"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title="답글 쓰기">
+                                <color key="titleColor" name="gray"/>
+                            </state>
+                        </button>
+                        <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="IOa-0e-9B5">
+                            <rect key="frame" x="313" y="35.333333333333336" width="30" height="29.666666666666664"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m7P-kI-ghH">
+                                    <rect key="frame" x="5" y="0.0" width="20" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="20" id="jpQ-1k-fUm"/>
+                                        <constraint firstAttribute="height" constant="20" id="qMo-Kg-lTQ"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="tintColor" name="gray"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <state key="normal" title="" image="suit.heart" catalog="system"/>
+                                    <buttonConfiguration key="configuration" style="plain" title="">
+                                        <imageReference key="image" image="heart.fill" catalog="system" symbolScale="small"/>
+                                    </buttonConfiguration>
+                                </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PvJ-G9-Jck">
+                                    <rect key="frame" x="4.3333333333333144" y="20" width="21.666666666666668" height="9.6666666666666643"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                    <color key="textColor" name="gray"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="30" id="zmH-qR-Thb"/>
+                            </constraints>
+                        </stackView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FIN-ev-q3M">
+                            <rect key="frame" x="56" y="112" width="257" height="20"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KWp-sy-x5Y">
+                                    <rect key="frame" x="0.0" y="9.6666666666666714" width="20" height="1"/>
+                                    <color key="backgroundColor" name="gray"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="DxO-6a-cxM"/>
+                                        <constraint firstAttribute="width" constant="20" id="Tbg-ve-1yO"/>
+                                    </constraints>
+                                </view>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kfh-lZ-rSf">
+                                    <rect key="frame" x="25" y="0.0" width="100" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="100" id="upG-cD-6DS"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                    <color key="tintColor" name="gray"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <state key="normal" title="답글 1개">
+                                        <color key="titleColor" name="gray"/>
+                                    </state>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="kfh-lZ-rSf" secondAttribute="bottom" id="3Rj-Ie-xAt"/>
+                                <constraint firstItem="KWp-sy-x5Y" firstAttribute="centerY" secondItem="FIN-ev-q3M" secondAttribute="centerY" id="3kn-zK-xmg"/>
+                                <constraint firstItem="kfh-lZ-rSf" firstAttribute="leading" secondItem="KWp-sy-x5Y" secondAttribute="trailing" constant="5" id="8aD-Nl-tA9"/>
+                                <constraint firstItem="kfh-lZ-rSf" firstAttribute="top" secondItem="FIN-ev-q3M" secondAttribute="top" id="Ah7-9k-4X2"/>
+                                <constraint firstItem="kfh-lZ-rSf" firstAttribute="centerY" secondItem="FIN-ev-q3M" secondAttribute="centerY" id="BKm-wm-jBd"/>
+                                <constraint firstItem="KWp-sy-x5Y" firstAttribute="leading" secondItem="FIN-ev-q3M" secondAttribute="leading" id="LTC-ea-7uc"/>
+                                <constraint firstAttribute="height" constant="20" id="VpE-eq-2vO"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="FIN-ev-q3M" firstAttribute="top" secondItem="MWS-Rg-6HF" secondAttribute="bottom" constant="5" id="3mo-M8-op4"/>
+                        <constraint firstItem="QIR-bY-rLL" firstAttribute="top" secondItem="6Fd-Hf-FXx" secondAttribute="top" constant="16" id="4r5-Bo-bUM"/>
+                        <constraint firstItem="hM6-tR-vwb" firstAttribute="leading" secondItem="6Fd-Hf-FXx" secondAttribute="leading" constant="16" id="5Yh-lF-Y0W"/>
+                        <constraint firstItem="hM6-tR-vwb" firstAttribute="top" secondItem="6Fd-Hf-FXx" secondAttribute="top" constant="16" id="CZa-ul-KaY"/>
+                        <constraint firstItem="QIR-bY-rLL" firstAttribute="leading" secondItem="hM6-tR-vwb" secondAttribute="trailing" constant="10" id="EDZ-dE-Ttu"/>
+                        <constraint firstAttribute="trailing" secondItem="IOa-0e-9B5" secondAttribute="trailing" constant="16" id="JTo-oB-k7P"/>
+                        <constraint firstItem="FIN-ev-q3M" firstAttribute="leading" secondItem="MWS-Rg-6HF" secondAttribute="leading" id="Klb-bl-MCh"/>
+                        <constraint firstAttribute="trailing" secondItem="QIR-bY-rLL" secondAttribute="trailing" constant="16" id="LjT-X7-2b4"/>
+                        <constraint firstItem="MWS-Rg-6HF" firstAttribute="top" secondItem="c3u-Qs-H4n" secondAttribute="bottom" constant="5" id="U8k-jO-7cj"/>
+                        <constraint firstItem="MWS-Rg-6HF" firstAttribute="leading" secondItem="c3u-Qs-H4n" secondAttribute="leading" id="Xgi-P4-cYP"/>
+                        <constraint firstItem="c3u-Qs-H4n" firstAttribute="leading" secondItem="QIR-bY-rLL" secondAttribute="leading" id="k3W-fk-5Oy"/>
+                        <constraint firstItem="c3u-Qs-H4n" firstAttribute="trailing" secondItem="FIN-ev-q3M" secondAttribute="trailing" id="nBU-N2-gDt"/>
+                        <constraint firstItem="IOa-0e-9B5" firstAttribute="leading" secondItem="c3u-Qs-H4n" secondAttribute="trailing" id="tS3-Dm-3PO"/>
+                        <constraint firstItem="c3u-Qs-H4n" firstAttribute="top" secondItem="QIR-bY-rLL" secondAttribute="bottom" constant="5" id="vm3-lR-8h7"/>
+                        <constraint firstItem="IOa-0e-9B5" firstAttribute="top" secondItem="QIR-bY-rLL" secondAttribute="bottom" constant="5" id="y2I-fW-m4G"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
+            <constraints>
+                <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="6Fd-Hf-FXx" secondAttribute="trailing" id="JLr-8j-1b3"/>
+                <constraint firstItem="6Fd-Hf-FXx" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="VdM-WI-RUl"/>
+                <constraint firstAttribute="bottom" secondItem="6Fd-Hf-FXx" secondAttribute="bottom" id="g9k-ja-2tz"/>
+                <constraint firstItem="6Fd-Hf-FXx" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="h6B-Go-Brm"/>
+            </constraints>
+            <connections>
+                <outlet property="commentButton" destination="MWS-Rg-6HF" id="3vo-Fy-grH"/>
+                <outlet property="contextLabel" destination="c3u-Qs-H4n" id="MUX-R1-mgl"/>
+                <outlet property="likeButton" destination="m7P-kI-ghH" id="4v6-aj-3rx"/>
+                <outlet property="likeCountLabel" destination="PvJ-G9-Jck" id="Tnw-Hv-tHZ"/>
+                <outlet property="nicknameLabel" destination="mAj-EC-Cf7" id="8Jc-RV-Pix"/>
+                <outlet property="profileImageView" destination="hM6-tR-vwb" id="REo-uU-NIq"/>
+                <outlet property="showCommentButton" destination="kfh-lZ-rSf" id="WHu-kH-Fmk"/>
+                <outlet property="showCommentView" destination="FIN-ev-q3M" id="oZi-Ik-IkU"/>
+                <outlet property="timeLabel" destination="FLO-01-XJK" id="brg-6u-WuC"/>
+            </connections>
+            <point key="canvasLocation" x="211.4503816793893" y="25.704225352112676"/>
         </collectionReusableView>
     </objects>
+    <resources>
+        <image name="heart.fill" catalog="system" width="128" height="107"/>
+        <image name="suit.heart" catalog="system" width="128" height="107"/>
+        <namedColor name="gray">
+            <color red="0.72549019607843135" green="0.72549019607843135" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
