--- a/HighSchoolFish/View/CommentHeaderReusableView.xib
+++ b/HighSchoolFish/View/CommentHeaderReusableView.xib
@@ -7,7 +7,6 @@
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="359" height="141"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Fd-Hf-FXx">
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Fd-Hf-FXx">
                     <rect key="frame" x="0.0" y="0.0" width="359" height="141"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hM6-tR-vwb">
@@ -93,11 +92,12 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
+                            <gestureRecognizers/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="zmH-qR-Thb"/>
                             </constraints>
                         </stackView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FIN-ev-q3M">
+                        <view multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FIN-ev-q3M">
                             <rect key="frame" x="56" y="112" width="257" height="20"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KWp-sy-x5Y">
@@ -108,7 +108,7 @@
                                         <constraint firstAttribute="width" constant="20" id="Tbg-ve-1yO"/>
                                     </constraints>
                                 </view>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kfh-lZ-rSf">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kfh-lZ-rSf">
                                     <rect key="frame" x="25" y="0.0" width="100" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="100" id="upG-cD-6DS"/>
@@ -122,6 +122,7 @@
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <gestureRecognizers/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="kfh-lZ-rSf" secondAttribute="bottom" id="3Rj-Ie-xAt"/>
                                 <constraint firstItem="KWp-sy-x5Y" firstAttribute="centerY" secondItem="FIN-ev-q3M" secondAttribute="centerY" id="3kn-zK-xmg"/>
@@ -133,7 +134,8 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <gestureRecognizers/>
                     <constraints>
                         <constraint firstItem="FIN-ev-q3M" firstAttribute="top" secondItem="MWS-Rg-6HF" secondAttribute="bottom" constant="5" id="3mo-M8-op4"/>
                         <constraint firstItem="QIR-bY-rLL" firstAttribute="top" secondItem="6Fd-Hf-FXx" secondAttribute="top" constant="16" id="4r5-Bo-bUM"/>
@@ -161,15 +163,16 @@
                 <constraint firstItem="6Fd-Hf-FXx" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="h6B-Go-Brm"/>
             </constraints>
             <connections>
-                <outlet property="commentButton" destination="MWS-Rg-6HF" id="3vo-Fy-grH"/>
-                <outlet property="contextLabel" destination="c3u-Qs-H4n" id="MUX-R1-mgl"/>
-                <outlet property="likeButton" destination="m7P-kI-ghH" id="4v6-aj-3rx"/>
-                <outlet property="likeCountLabel" destination="PvJ-G9-Jck" id="Tnw-Hv-tHZ"/>
-                <outlet property="nicknameLabel" destination="mAj-EC-Cf7" id="8Jc-RV-Pix"/>
-                <outlet property="profileImageView" destination="hM6-tR-vwb" id="REo-uU-NIq"/>
-                <outlet property="showCommentButton" destination="kfh-lZ-rSf" id="WHu-kH-Fmk"/>
-                <outlet property="showCommentView" destination="FIN-ev-q3M" id="oZi-Ik-IkU"/>
-                <outlet property="timeLabel" destination="FLO-01-XJK" id="brg-6u-WuC"/>
+                <outlet property="backView" destination="6Fd-Hf-FXx" id="zNh-a6-z7z"/>
+                <outlet property="commentButton" destination="MWS-Rg-6HF" id="Vy9-Wv-Pec"/>
+                <outlet property="contextLabel" destination="c3u-Qs-H4n" id="vDo-h5-t8n"/>
+                <outlet property="likeButton" destination="m7P-kI-ghH" id="Ob9-zn-RQm"/>
+                <outlet property="likeCountLabel" destination="PvJ-G9-Jck" id="PQ0-I1-Z8d"/>
+                <outlet property="nicknameLabel" destination="mAj-EC-Cf7" id="E4M-V1-wSg"/>
+                <outlet property="profileImageView" destination="hM6-tR-vwb" id="jfS-HP-8Op"/>
+                <outlet property="showMoreButton" destination="kfh-lZ-rSf" id="9F3-6h-uQr"/>
+                <outlet property="showMoreView" destination="FIN-ev-q3M" id="9Ed-nh-91Q"/>
+                <outlet property="timeLabel" destination="FLO-01-XJK" id="rc4-1l-fXw"/>
             </connections>
             <point key="canvasLocation" x="211.4503816793893" y="25.704225352112676"/>
         </collectionReusableView>
@@ -180,8 +183,5 @@
         <namedColor name="gray">
             <color red="0.72549019607843135" green="0.72549019607843135" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
