--- a/HighSchoolFish/View/CommentTableViewCell.xib
+++ b/HighSchoolFish/View/CommentTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -109,7 +109,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="commentWriteButton" destination="Tnw-8h-INL" id="CCP-lh-qCP"/>
+                <outlet property="commentWriteButton" destination="Tnw-8h-INL" id="yr3-ug-vE7"/>
                 <outlet property="contextLabel" destination="xjA-pe-Spl" id="lUG-DH-Fr1"/>
                 <outlet property="likeButton" destination="sWg-Vw-sep" id="noc-Ca-GRW"/>
                 <outlet property="likeCountLabel" destination="ozF-O9-Aly" id="twr-1H-PUJ"/>
