--- a/HighSchoolFish/View/CommentTableHeaderView.xib
+++ b/HighSchoolFish/View/CommentTableHeaderView.xib
@@ -101,11 +101,11 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u1I-Th-eOj">
-                            <rect key="frame" x="34.999999999999993" y="30" width="64.333333333333314" height="28.333333333333329"/>
+                            <rect key="frame" x="35" y="31.333333333333343" width="57.666666666666657" height="26"/>
                             <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="답글 1개" titleAlignment="leading">
-                                <fontDescription key="titleFontDescription" type="system" pointSize="12"/>
+                                <fontDescription key="titleFontDescription" type="system" pointSize="10"/>
                             </buttonConfiguration>
                         </button>
                     </subviews>
