--- a/HighSchoolFish/View/CommentTableHeaderView.xib
+++ b/HighSchoolFish/View/CommentTableHeaderView.xib
@@ -13,7 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CommentTableHeaderView" customModule="HighSchoolFish" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="420" height="258"/>
+            <rect key="frame" x="0.0" y="0.0" width="555" height="170"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="NVy-dr-1jD">
@@ -24,7 +24,7 @@
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hnX-T9-NJe">
-                    <rect key="frame" x="56" y="16" width="348" height="15"/>
+                    <rect key="frame" x="56" y="16" width="483" height="15"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dn-Lt-anz">
                             <rect key="frame" x="5" y="0.66666666666666785" width="34.333333333333336" height="14.333333333333334"/>
@@ -49,14 +49,14 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbC-5P-Fuf">
-                    <rect key="frame" x="56" y="41.000000000000007" width="308" height="77.666666666666686"/>
+                    <rect key="frame" x="56" y="41" width="449" height="62.333333333333343"/>
                     <string key="text">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리 나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세 달콤한 색감이 물들어 조금씩 정신을 차렸을 땐 알아볼 수도 없지가득찬 마음이동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리 나라만세 무궁화 삼천리 화려</string>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9ZB-4K-pYu">
-                    <rect key="frame" x="56" y="128.66666666666666" width="50" height="20"/>
+                    <rect key="frame" x="56" y="113.33333333333333" width="50" height="19.999999999999986"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="Sl6-Jw-rYg"/>
                         <constraint firstAttribute="height" constant="20" id="Vs5-BN-1PK"/>
@@ -68,7 +68,7 @@
                     </state>
                 </button>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="yqI-U3-tfH">
-                    <rect key="frame" x="374" y="41" width="30" height="31.666666666666671"/>
+                    <rect key="frame" x="515" y="41" width="30" height="31.666666666666671"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ctU-b0-yD9">
                             <rect key="frame" x="0.0" y="0.0" width="30" height="22"/>
@@ -90,10 +90,10 @@
                     </constraints>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kqb-3S-RAO">
-                    <rect key="frame" x="56" y="153.66666666666666" width="120" height="88.333333333333343"/>
+                    <rect key="frame" x="56" y="138.33333333333334" width="120" height="15.666666666666657"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q3c-O9-ZxN">
-                            <rect key="frame" x="0.0" y="43.666666666666686" width="30" height="1"/>
+                            <rect key="frame" x="0.0" y="7.3333333333333144" width="30" height="1"/>
                             <color key="backgroundColor" name="gray"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="37n-vc-dh2"/>
@@ -101,12 +101,13 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u1I-Th-eOj">
-                            <rect key="frame" x="35" y="31.333333333333343" width="57.666666666666657" height="26"/>
+                            <rect key="frame" x="35" y="-4" width="34" height="24"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
                             <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" title="답글 1개" titleAlignment="leading">
-                                <fontDescription key="titleFontDescription" type="system" pointSize="10"/>
-                            </buttonConfiguration>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title="답글 1개">
+                                <color key="titleColor" name="gray"/>
+                            </state>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="tableBackgroundColor"/>
@@ -118,46 +119,75 @@
                         <constraint firstItem="u1I-Th-eOj" firstAttribute="leading" secondItem="Q3c-O9-ZxN" secondAttribute="trailing" constant="5" id="yeR-no-Pz8"/>
                     </constraints>
                 </view>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6NL-L5-y4i">
+                    <rect key="frame" x="475" y="0.0" width="80" height="170"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rdj-FU-E7O">
+                            <rect key="frame" x="15" y="74" width="50" height="22"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="W6V-Xz-Qin"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="trashCanIcon"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" name="red"/>
+                    <constraints>
+                        <constraint firstItem="Rdj-FU-E7O" firstAttribute="centerX" secondItem="6NL-L5-y4i" secondAttribute="centerX" id="2kh-hP-Kh6"/>
+                        <constraint firstItem="Rdj-FU-E7O" firstAttribute="centerY" secondItem="6NL-L5-y4i" secondAttribute="centerY" id="sZT-u2-al9"/>
+                        <constraint firstAttribute="width" constant="80" id="v96-eq-S8e"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="6NL-L5-y4i" secondAttribute="bottom" id="4PF-IM-Ra0"/>
                 <constraint firstAttribute="trailing" secondItem="hnX-T9-NJe" secondAttribute="trailing" constant="16" id="4vK-X2-kER"/>
-                <constraint firstItem="NVy-dr-1jD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="6yf-PS-0zp"/>
+                <constraint firstAttribute="trailing" secondItem="6NL-L5-y4i" secondAttribute="trailing" id="DNb-y3-KlX"/>
                 <constraint firstItem="9ZB-4K-pYu" firstAttribute="top" secondItem="KbC-5P-Fuf" secondAttribute="bottom" constant="10" id="HXw-ql-PtH"/>
                 <constraint firstItem="yqI-U3-tfH" firstAttribute="leading" secondItem="KbC-5P-Fuf" secondAttribute="trailing" constant="10" id="Ok0-Xr-OER"/>
                 <constraint firstItem="kqb-3S-RAO" firstAttribute="leading" secondItem="KbC-5P-Fuf" secondAttribute="leading" id="RWv-SP-lzp"/>
                 <constraint firstItem="kqb-3S-RAO" firstAttribute="top" secondItem="9ZB-4K-pYu" secondAttribute="bottom" constant="5" id="XF3-7r-rRo"/>
+                <constraint firstItem="6NL-L5-y4i" firstAttribute="trailing" secondItem="yqI-U3-tfH" secondAttribute="trailing" constant="10" id="bav-LD-IFv"/>
+                <constraint firstItem="NVy-dr-1jD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="byU-qB-iEP"/>
                 <constraint firstItem="9ZB-4K-pYu" firstAttribute="leading" secondItem="KbC-5P-Fuf" secondAttribute="leading" id="c6W-rv-ASe"/>
                 <constraint firstItem="yqI-U3-tfH" firstAttribute="top" secondItem="KbC-5P-Fuf" secondAttribute="top" id="eBV-4h-dMf"/>
                 <constraint firstItem="hnX-T9-NJe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="f39-hU-Orj"/>
                 <constraint firstItem="NVy-dr-1jD" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="nMK-9b-8Ty"/>
                 <constraint firstItem="KbC-5P-Fuf" firstAttribute="top" secondItem="hnX-T9-NJe" secondAttribute="bottom" constant="10" id="nVF-9O-QK3"/>
                 <constraint firstItem="hnX-T9-NJe" firstAttribute="leading" secondItem="NVy-dr-1jD" secondAttribute="trailing" constant="10" id="rc1-uv-yOH"/>
+                <constraint firstItem="6NL-L5-y4i" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="rur-ZN-g1I"/>
                 <constraint firstItem="KbC-5P-Fuf" firstAttribute="leading" secondItem="hnX-T9-NJe" secondAttribute="leading" id="sWk-t9-92E"/>
                 <constraint firstAttribute="bottom" secondItem="kqb-3S-RAO" secondAttribute="bottom" constant="16" id="xJo-Je-oAN"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="yqI-U3-tfH" secondAttribute="trailing" constant="16" id="y3V-AI-BwN"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="commentSwipeChangingConstraint" destination="byU-qB-iEP" id="i6U-bP-eZa"/>
                 <outlet property="commentWriteButton" destination="9ZB-4K-pYu" id="4di-oi-LWn"/>
                 <outlet property="contextLabel" destination="KbC-5P-Fuf" id="74T-AR-yfD"/>
+                <outlet property="deleteButtonView" destination="6NL-L5-y4i" id="vkg-lc-oR9"/>
                 <outlet property="likeButton" destination="ctU-b0-yD9" id="vto-vC-2e2"/>
                 <outlet property="likeCountLabel" destination="Pp2-bc-Nzl" id="KZ8-SF-wTj"/>
                 <outlet property="nameLabel" destination="0dn-Lt-anz" id="G5d-f7-j8a"/>
                 <outlet property="profileImage" destination="NVy-dr-1jD" id="jxR-UC-JE4"/>
                 <outlet property="showMoreView" destination="kqb-3S-RAO" id="Hky-aA-sMk"/>
                 <outlet property="showMoreViewButton" destination="u1I-Th-eOj" id="dlP-nd-oNM"/>
+                <outlet property="stackViewTrailingConstraint" destination="bav-LD-IFv" id="aXK-Wl-u5m"/>
                 <outlet property="timeLabel" destination="M17-Tp-6jG" id="VAm-Zb-2Fz"/>
             </connections>
-            <point key="canvasLocation" x="309.92366412213738" y="46.478873239436624"/>
+            <point key="canvasLocation" x="411.4503816793893" y="15.492957746478874"/>
         </view>
     </objects>
     <resources>
         <image name="heart.fill" catalog="system" width="128" height="107"/>
         <image name="profileIcon" width="110" height="110"/>
+        <image name="trashCanIcon" width="17" height="17"/>
         <namedColor name="gray">
             <color red="0.72549019607843135" green="0.72549019607843135" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="red">
+            <color red="0.99215686274509807" green="0.50588235294117645" blue="0.50588235294117645" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
