--- a/HighSchoolFish/View/SchoolChangeRequestTableViewCell.xib
+++ b/HighSchoolFish/View/SchoolChangeRequestTableViewCell.xib
@@ -1,21 +1,63 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SchoolChangeRequestTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SchoolChangeRequestTableViewCell" rowHeight="78" id="KGk-i7-Jjw" customClass="SchoolChangeRequestTableViewCell" customModule="HighSchoolFish" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="364" height="78"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="364" height="78"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jrz-5l-Jmd">
+                        <rect key="frame" x="16" y="20" width="222" height="19.333333333333329"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCR-QF-ITB">
+                        <rect key="frame" x="16" y="51" width="222" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" name="gray"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6hW-bu-JLz">
+                        <rect key="frame" x="258" y="21.666666666666671" width="80" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="3vd-pU-rec"/>
+                            <constraint firstAttribute="width" constant="80" id="Gs1-TK-rAp"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" title="상태"/>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Jrz-5l-Jmd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="C8P-CX-1l6"/>
+                    <constraint firstAttribute="trailing" secondItem="6hW-bu-JLz" secondAttribute="trailing" constant="26" id="Nex-dF-aqa"/>
+                    <constraint firstItem="bCR-QF-ITB" firstAttribute="leading" secondItem="Jrz-5l-Jmd" secondAttribute="leading" id="UZF-jW-II6"/>
+                    <constraint firstItem="6hW-bu-JLz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Y1e-Fw-91t"/>
+                    <constraint firstAttribute="bottom" secondItem="bCR-QF-ITB" secondAttribute="bottom" constant="10" id="gys-M5-YcC"/>
+                    <constraint firstItem="6hW-bu-JLz" firstAttribute="leading" secondItem="Jrz-5l-Jmd" secondAttribute="trailing" constant="20" id="q59-hA-g3n"/>
+                    <constraint firstItem="6hW-bu-JLz" firstAttribute="leading" secondItem="bCR-QF-ITB" secondAttribute="trailing" constant="20" id="rzK-PC-6dS"/>
+                    <constraint firstItem="Jrz-5l-Jmd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="wbY-oS-O65"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="62.595419847328245" y="24.647887323943664"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="gray">
+            <color red="0.72549019607843135" green="0.72549019607843135" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
